# breakthrough-mcts

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
konspekt/: Makefile  bibliography.bib  konspekt.tex
notebooks/: analysis_cross.py  analysis_h1.py  analysis_h2.py  analysis_h3.py  analysis_h4.py  analysis_h5.py  analysis_h6.py  analysis_human.py  shared_utils.py
python/breakthrough/: __init__.py  _worker.py  agents.py  gui.py  reference_game.py
python/breakthrough/experiments/: harness.py  run_h1.py  run_h2.py  run_h3.py  run_h3_extended.py  run_h4.py  run_h5.py  run_h6.py
report/: Makefile  bibliography.bib  main.tex  prezentacja.tex
report/sections/: 00_streszczenie.tex  01_wstep.tex  02_literatura.tex  03_metoda.tex  04_eksperymenty.tex  05_wyniki.tex  06_wnioski.tex  07_llm.tex
results/h1_rave_vs_uct/: experiment_meta.json
results/h2_pb_vs_uct/: experiment_meta.json
results/h3_heuristic_vs_uct/: experiment_meta.json  games.jsonl
results/h4_first_player_8x8/: experiment_meta.json  games.jsonl
results/h5_c_tuning/: experiment_meta.json  games.jsonl
results/h6_decision_time/: experiment_meta.json  games.jsonl
src/: game.rs  heuristic.rs  lib.rs
src/mcts/: mod.rs  progressive_bias.rs  rave.rs  uct.rs
tests/: test_rust_vs_python.py
