[package]
name = "breakthrough_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "breakthrough_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
